# easy-election

./: .dockerignore  .env.example  .gitignore  README.md  app.py  engine.py  prompts.py  pyproject.toml  pyrightconfig.json  requirements.txt
src/: __init__.py
src/logic/: __init__.py  election_engine.py  prompt_builder.py
src/services/: __init__.py  base_service.py  bigquery_service.py  cloud_logging_service.py  cloud_storage_service.py  google_maps_service.py  vertex_ai_service.py
src/ui/: __init__.py  pages.py  styles.py
src/utils/: __init__.py  accessibility.py  performance.py  security.py  translations.py  validators.py
tests/: conftest.py  test_app.py  test_services.py
